...
    android:background="@color/theme_background"
    tools:context=".view.SearchSubjectFragment">

    <!-- TODO: Update blank fragment layout -->

    <Spinner
        android:id="@+id/subjectSpinner"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:minHeight="32dp"
        app:layout_constraintBottom_toTopOf="@+id/levelSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/levelSpinner"
...
        android:layout_height="wrap_content"
        android:text="Your Level"
        app:layout_constraintBottom_toTopOf="@+id/levelSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/findTutor"
        style="@style/Widget.Material3.Button"
        android:layout_width="328dp"
        android:layout_height="54dp"
        android:text="Search"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
