<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    tools:context=".view.AddEmailPasswordFragment">

    <Button
        android:id="@+id/nextButton1"
        style="@style/Widget.Material3.Button"
        android:layout_width="328dp"
        android:layout_height="54dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="41dp"
        android:text="Next"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/cueLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="What's your login credentials?"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cueLabel1" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:gravity="start"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:typeface="sans"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>